add api post step to dispatch workflow

--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -2,8 +2,17 @@ on:
   push:
 
 jobs:
-  test:
+  dispatch:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo "this is a test"
+      - name: post to github api
+        # https://docs.github.com/en/rest/repos/repos?apiVersion=2022-11-28#create-a-repository-dispatch-event
+        # https://docs.github.com/en/actions/security-for-github-actions/security-guides/automatic-token-authentication
+        run: |
+          curl --location \
+          --request POST \
+          --header "Accept: application/vnd.github+json" \
+          --header "Authorization: Bearer $GITHUB_TOKEN" \
+          --header "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/${{ vars.target_repo_owner }}/${{ vars.target_repo_name }}/dispatches \
+          --data '{"event_type":"on-demand-test","client_payload":{"unit":false,"integration":true}}'
