--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -12,7 +12,7 @@ jobs:
           curl --location \
           --request POST \
           --header "Accept: application/vnd.github+json" \
-          --header "Authorization: Bearer $GITHUB_TOKEN" \
+          --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           --header "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{ vars.target_repo_owner }}/${{ vars.target_repo_name }}/dispatches \
           --data '{"event_type":"on-demand-test","client_payload":{"unit":false,"integration":true}}'
