--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -1,5 +1,11 @@
 on:
-  push:
+  workflow_dispatch:
+    inputs:
+      message:
+        type: string
+        description: just a test message
+        required: true
+        default: testing
 
 jobs:
   dispatch:
@@ -12,7 +18,7 @@ jobs:
           curl --location \
           --request POST \
           --header "Accept: application/vnd.github+json" \
-          --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          --header "Authorization: Bearer ${{ secrets.personal_access_token }}" \
           --header "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{ vars.target_repo_owner }}/${{ vars.target_repo_name }}/dispatches \
-          --data '{"event_type":"on-demand-test","client_payload":{"unit":false,"integration":true}}'
+          --data '{"event_type":"manual-test","client_payload":{"message":"${{ github.event.inputs.message }}"}}'
