--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -16,6 +16,7 @@ jobs:
         # https://docs.github.com/en/actions/security-for-github-actions/security-guides/automatic-token-authentication
         run: |
           curl --location \
+          --fail-with-body \
           --request POST \
           --header "Accept: application/vnd.github+json" \
           --header "Authorization: Bearer ${{ secrets.personal_access_token }}" \
