--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: post to github api
+        shell: bash
         # https://docs.github.com/en/rest/repos/repos?apiVersion=2022-11-28#create-a-repository-dispatch-event
         # https://docs.github.com/en/actions/security-for-github-actions/security-guides/automatic-token-authentication
         run: |
